# bitcoin-webui

./: .gitignore  README.md
backend/: Cargo.toml  README.md
backend/example/: config.toml
backend/src/: bitcoin_info.rs  config.rs  main.rs
frontend/: Cargo.toml  README.md  Trunk.toml  index.html
frontend/assets/: manifest.json  sw.js
frontend/src/: app.rs  main.rs
